2013-11-04  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* CADGeometry.wrl:
	* Wheel.wrl:
	* RenderingGeometry.wrl: 

2013-11-04  Holger Seelig  <holger.seelig@yahoo.de>

	* MultiTexture.wrl: 

2013-11-04  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* test.wrl:
	* Texture.wrl:
	* Geometry2D.wrl:
	* Geometry3D.wrl:
	* MultiTexture.wrl:
	* CADGeometry.wrl:
	* RenderingGeometry.wrl: 

2013-11-03  Holger Seelig  <holger.seelig@yahoo.de>

	* hangar.wrl: 

2013-10-31  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* ScreenFontStyle.wrl: 

2013-10-30  Holger Seelig  <holger.seelig@yahoo.de>

	* RandomText.wrl: 

2013-10-30  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* Text.wrl:
	* RandomText.wrl:
	* RandomText.wrl: 

2013-10-30  Holger Seelig  <holger.seelig@yahoo.de>

	* test.wrl:
	* OutlineEditor.wrl:
	* TransformHandle.wrl: 

2013-10-25  Holger Seelig  <holger.seelig@yahoo.de>

	* 4vong.wrl: 

2013-10-23  Holger Seelig  <holger.seelig@yahoo.de>

	* CylinderSensor.wrl: 

2013-10-23  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* test.wrl: 

2013-10-23  Holger Seelig  <holger.seelig@yahoo.de>

	* TransformHandle.wrl: 

2013-10-21  Holger Seelig  <holger.seelig@yahoo.de>

	* PlaneSensor.wrl: 

2013-10-21  Holger Seelig  <holger.seelig@yahoo.de>

	* PlaneSensor.wrl: 

2013-10-21  Holger Seelig  <holger.seelig@yahoo.de>

	* TransformHandle.wrl: 

2013-10-21  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* LineSensor.wrl: 

2013-10-20  Holger Seelig  <holger.seelig@yahoo.de>

	* Billboard110.wrl:
	* TransformHandle.wrl: 

2013-10-19  Holger Seelig  <holger.seelig@yahoo.de>

	* TransformHandle.wrl: 

2013-10-19  Holger Seelig  <holger.seelig@yahoo.de>

	* Text.wrl:
	* TransformHandle.wrl: 

2013-10-18  Holger Seelig  <holger.seelig@yahoo.de>

	* TransformHandle.wrl: 

2013-10-17  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* WorldInfo.wrl:
	* Fields.pl: