@@ -1,3 +1,7 @@
+2013-11-05  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* MultiTexture.wrl: 
+
 2013-11-04  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* Library.mdproj:
